--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.holamundo.Principal">
+    tools:context="com.example.android.holamundo.Principal"><![CDATA[
 
     TextView
         android:layout_width="wrap_content"
@@ -16,10 +16,12 @@
         android:text="Hello World!" />
 
 
+    ]]>
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"></LinearLayout>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"></LinearLayout>
 </RelativeLayout>
