--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -35,7 +35,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
-            android:gravity="center_horizontal" />
+            android:gravity="center_horizontal"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:fontFamily="serif"
+            android:textSize="30sp"
+            android:textStyle="normal|bold" />
 
         <EditText
             android:layout_width="match_parent"
@@ -57,7 +61,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/lblView"
             android:layout_weight="0.08"
-            android:textAppearance="@style/TextAppearance.AppCompat" />
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp" />
 
     </LinearLayout>
 </RelativeLayout>
