--- a/app/src/main/res/layout/activity_saludo.xml
+++ b/app/src/main/res/layout/activity_saludo.xml
@@ -15,5 +15,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"></LinearLayout>
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:text="@string/Bienvenido"
+            android:textAlignment="center"
+            android:textStyle="normal|bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtSaludo"
+            android:textAlignment="center" />
+    </LinearLayout>
 </RelativeLayout>
